hyperlink support. no actions yet, only showing title when mouse is over link

--- a/custom-input.cbp
+++ b/custom-input.cbp
@@ -19,6 +19,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="hyperlink-output.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="hyperlink-output.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
