--- a/custom-input.cbp
+++ b/custom-input.cbp
@@ -6,11 +6,20 @@
 		<Option pch_mode="2" />
 		<Option compiler="gnu_gcc_x64_compiler" />
 		<Build>
-			<Target title="Debug">
-				<Option output="bin/Debug/custom-input" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj/Debug/" />
+			<Target title="x64-debug">
+				<Option output="bin/x64-debug/custom-input" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/x64-debug/" />
 				<Option type="1" />
 				<Option compiler="gnu_gcc_x64_compiler" />
+				<Compiler>
+					<Add option="-g" />
+				</Compiler>
+			</Target>
+			<Target title="x86-debug">
+				<Option output="bin/x86-debug/custom-input" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/x86-debug/" />
+				<Option type="1" />
+				<Option compiler="gnu_gcc_x86_compiler" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
@@ -33,6 +42,7 @@
 		<Extensions>
 			<code_completion />
 			<debugger />
+			<envvars />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
