workaround for issue #5 read console output in smaller chunks

--- a/custom-input.cbp
+++ b/custom-input.cbp
@@ -28,6 +28,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="console-buffer-io.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="console-buffer-io.h" />
 		<Unit filename="hyperlink-output.c">
 			<Option compilerVar="CC" />
 		</Unit>
