--- a/custom-input.cbp
+++ b/custom-input.cbp
@@ -32,6 +32,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="console-buffer-io.h" />
+		<Unit filename="debug.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="debug.h" />
 		<Unit filename="hyperlink-output.c">
 			<Option compilerVar="CC" />
 		</Unit>
