--- a/custom-input.cbp
+++ b/custom-input.cbp
@@ -14,6 +14,9 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add library="shell32" />
+				</Linker>
 			</Target>
 			<Target title="x86-debug">
 				<Option output="bin/x86-debug/custom-input" prefix_auto="1" extension_auto="1" />
@@ -23,6 +26,9 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add library="shell32" />
+				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
