move get_word_start/get_word_end to text-util.c

--- a/custom-input.cbp
+++ b/custom-input.cbp
@@ -61,6 +61,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="scroll-counter.h" />
+		<Unit filename="text-util.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="text-util.h" />
 		<Extensions>
 			<code_completion />
 			<debugger />
