--- a/custom-input.cbp
+++ b/custom-input.cbp
@@ -6,9 +6,9 @@
 		<Option pch_mode="2" />
 		<Option compiler="gnu_gcc_x64_compiler" />
 		<Build>
-			<Target title="x64-debug">
-				<Option output="bin/x64-debug/custom-input" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj/x64-debug/" />
+			<Target title="x64-gcc-debug">
+				<Option output="bin/x64-gcc-debug/custom-input" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/x64-gcc-debug/" />
 				<Option type="1" />
 				<Option compiler="gnu_gcc_x64_compiler" />
 				<Compiler>
@@ -16,11 +16,12 @@
 				</Compiler>
 				<Linker>
 					<Add library="shell32" />
+					<Add library="user32" />
 				</Linker>
 			</Target>
-			<Target title="x86-debug">
-				<Option output="bin/x86-debug/custom-input" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj/x86-debug/" />
+			<Target title="x86-gcc-debug">
+				<Option output="bin/x86-gcc-debug/custom-input" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/x86-gcc-debug/" />
 				<Option type="1" />
 				<Option compiler="gnu_gcc_x86_compiler" />
 				<Compiler>
@@ -28,6 +29,21 @@
 				</Compiler>
 				<Linker>
 					<Add library="shell32" />
+					<Add library="user32" />
+				</Linker>
+			</Target>
+			<Target title="x64-msvc-debug">
+				<Option output="bin/x64-msvc-debug/custom-input" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/x64-msvc-debug/" />
+				<Option type="1" />
+				<Option compiler="msvc_2015_x64" />
+				<Compiler>
+					<Add option="/Zi" />
+				</Compiler>
+				<Linker>
+					<Add option="/DEBUG" />
+					<Add library="shell32" />
+					<Add library="user32" />
 				</Linker>
 			</Target>
 		</Build>
