--- a/custom-input.cbp
+++ b/custom-input.cbp
@@ -52,6 +52,22 @@
 					<Add library="uuid" />
 				</Linker>
 			</Target>
+			<Target title="x86-msvc-debug">
+				<Option output="bin/x86-msvc-debug/custom-input" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/x86-msvc-debug/" />
+				<Option type="1" />
+				<Option compiler="msvc_2015" />
+				<Compiler>
+					<Add option="/Zi" />
+				</Compiler>
+				<Linker>
+					<Add option="/DEBUG" />
+					<Add library="shell32" />
+					<Add library="user32" />
+					<Add library="ole32" />
+					<Add library="uuid" />
+				</Linker>
+			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
